k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: multi-agent-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: multi-agent-backend

  template:
    metadata:
      labels:
        app: multi-agent-backend

    spec:
      containers:
        - name: backend

          image: 903584666644.dkr.ecr.us-east-1.amazonaws.com/multi-agent-backend:latest

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 3000

            initialDelaySeconds: 10
            periodSeconds: 10
